--- a/DejaBrew/src/main/resources/static/details.css
+++ b/DejaBrew/src/main/resources/static/details.css
@@ -60,6 +60,31 @@ body {
 	width: 80%;
 }
 
+.review {
+	margin-bottom: 20px;	
+}	
+
+.beer-detail {	
+	margin:auto;	
+	width:90%;	
+    display: grid;	
+    grid-template-columns: 1fr 3fr;	
+    border-style: solid;	
+    margin-bottom: 8px;	
+}	
+
+.beer-img {	
+    margin: auto;	
+    grid-column: 1;	
+}	
+
+.beer-info {	
+	margin: 4px;	
+    padding: 10px 22px;	
+    grid-column: 2;	
+    background-color: rgb(175, 175, 175);	
+}
+
 /*---------- Rating ----------*/
 
 .rating {
@@ -69,7 +94,6 @@ body {
 }
 .rating:not(:checked) > input {
     position:absolute;
-     /* top:-9999px; */
      clip:rect(0,0,0,0); 
 }
 .rating:not(:checked) > label {
@@ -97,4 +121,4 @@ body {
 .rating > input:checked ~ label:hover ~ label,
 .rating > label:hover ~ input:checked ~ label {
     color: #c59b08;
-  
+} 
