--- a/DejaBrew/src/main/resources/static/IndexCSS.css
+++ b/DejaBrew/src/main/resources/static/IndexCSS.css
@@ -1,32 +1,54 @@
 body {
 	text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    padding-top: 65px;
-    color: white;
-    background-image: url("/image/Flag-of-Colorado-XL.jpg");
+	font-family: Arial, Helvetica, sans-serif;
+	padding-top: 65px;
+	color: white;
+	background-image: url("/image/Flag-of-Colorado-XL2.jpg");
+	background-position: center; 
+	background-repeat : no-repeat;
+	background-attachment: fixed;
+	overflow-x: hidden;
+	background-repeat: no-repeat;
 }
-.container-fluid{
+
+.container-fluid {
 	text-align: center;
 	font-family: Arial, Helvetica, sans-serif;
 	color: white;
 }
 
-/*  img {
-	width: 100%;
-	height: 50%;
-}  */
+.container {
+	margin: 5%;
+}
+
+
 .flex-container {
-	display:flex;
+	display: flex;
 	flex-direction: column;
-	/* align-items: baseline; */
-	
-}
-.flex-container img {
-	width: 200px;
-	
-}
-.flex-container div {
-	height: 50%;
 	position: relative;
-	bottom:0;
+	margin: 10px;
+}
+
+.img-div {
+	width: auto;
+	height: 200px;
+}
+
+.card-body {
+	vertical-align: center;
+}
+
+.card-body h4 {
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+	margin: 0;
+}
+
+.card-img-top {
+	width: 100%;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+	max-height: 200px;
 }
